--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+== Course Blog
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+The purposes of this application is to teach my self how to make an application by Rails 4 and understanding rails pattern. This Application build with
 
-Things you may want to cover:
+	* Ruby 2.2.3
 
-* Ruby version
+	* Rails 4.2.4
 
-* System dependencies
+	* Bootstrap-Sass
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+	* Simple-Form
